# email-env-assistant

./: Dockerfile  Infernce.py  README.md  env.py  models.py  openenv.yaml  pyproject.toml
server/: app.py
