[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-env-assistant"
version = "1.0.0"
description = "RL environment for email classification and reply"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "sanproster"}]
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openenv-core",
  "requests",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
